--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -9,6 +9,7 @@
   color: white;
 }
 
+
 .error {
   color: red;
 }
@@ -19,4 +20,38 @@
 
 .alert {
   margin-top: 25px;
+}
+
+.push-down {
+    margin-top: 20px;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 136px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 136px;
+  background-color: #f5f5f5;
+}
+
+/* admin classes */
+.admin-hidden {
+  display: none;
+}
+
+.admin-display {
+  display: inline-block;
+}
+
+.outlined {
+  border: 1px solid red;
 }
